update: swagger docs
