# docs/swagger.json
@@ -616,7 +616,7 @@
         },
         "/api/v1/task/{task}": {
             "get": {
-                "description": "获取指定任务的步骤列表, 支持WS长连接",
+                "description": "获取任务详情",
                 "consumes": [
                     "application/json"
                 ],
@@ -624,9 +624,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "步骤"
+                    "任务"
                 ],
-                "summary": "列表",
+                "summary": "详情",
                 "parameters": [
                     {
                         "type": "string",
@@ -640,7 +640,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/types.SBase-types_SStepsRes"
+                            "$ref": "#/definitions/types.SBase-types_STaskRes"
                         }
                     },
                     "500": {
@@ -733,6 +733,44 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/types.SBase-any"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/types.SBase-any"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/task/{task}/step": {
+            "get": {
+                "description": "获取指定任务的步骤列表, 支持WS长连接",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "步骤"
+                ],
+                "summary": "列表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "任务名称",
+                        "name": "task",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.SBase-types_SStepsRes"
                         }
                     },
                     "500": {
